--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{Name}",
+  "name": "Tuiter",
   "version": "1.0.0",
-  "description": "{description}",
+  "description": "Uma rede social criada para entender como uma rede social funciona.",
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
@@ -12,25 +12,25 @@
     "start:test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "{Author}",
+  "author": "João Pedro Monção",
   "license": "MIT",
   "dependencies": {
+    "@types/sequelize": "^4.28.18",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.2",
-<<<<<<< HEAD
-    "sequelize": "^6.34.0"
-=======
-    "sequelize": "^6.33.0",
-    "swagger-ui-express": "^5.0.0",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1"
->>>>>>> abc7791db4f50af6455c488e97e0064d504bc114
+    "sequelize": "^6.35.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.6.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
